<resources>
    <string name="app_name">App_Vinhos</string>
    <string name="bttintos">Tintos</string>
    <string name="btbrancos">Brancos</string>
    <string name="btespirituosos">Espirituosos</string>
    <string name="nometinto1">Trinca Bolotas</string>
    <string name="descricaotinto1">Vinho tinto 0.75cl</string>
    <string name="precotinto1">6.20 Euros</string>
    <string name="nometinto2">Quinta do Vallado</string>
    <string name="descricaotinto2">Vinho tinto Douro 0.75cl</string>
    <string name="precotinto2">7.20 Euros</string>
    <string name="nometinto3">Barca Velha</string>
    <string name="descricaotinto3">Vinho Douro 2011 - 0.75cl</string>
    <string name="precotinto3">200 Euros</string>
    <string name="nomebranco1">Quinta do Castro</string>
    <string name="descricaobranco1">Vinho branco 0.75cl</string>
    <string name="precobranco1">8.90 Euros</string>
    <string name="nomebranco2">Equilibrio</string>
    <string name="descricaobranco2">Vinho branco Minho 0.75cl</string>
    <string name="precobranco2">12.75 Euros</string>
    <string name="nomebranco3">Courela</string>
    <string name="descricaobranco3">Vinho Branco (Reserva) - 0.75cl</string>
    <string name="precobranco3">165 Euros</string>
    <string name="nomeespirit1">Calavera Negro</string>
    <string name="descricaoespirit1">Absinto 0.50cl</string>
    <string name="precoespirit1">3.49 Euros</string>
    <string name="nomeespirit2">Hennessy V.S</string>
    <string name="descricaoespirit2">Cognac 0.70cl</string>
    <string name="precoespirit2">36.95 Euros</string>
    <string name="nomeespirit3">Legendario Elixir</string>
    <string name="descricaoespirit3">Rum  0.70cl</string>
    <string name="precoespirit3">19.49 Euros</string>
    <string name="ctxwllcm">Bem Vindo</string>
    <string name="ctxTitle">APP Vinhos</string>
    <string name="xtxTxt">\"Sinta-se à vontade para explorar a nossa seleção de vinhos. \"</string>
    <string name="nometintoA1">"A Touriga Vai Nua "</string>
    <string name="nometintoA2">Abreu Callado</string>
    <string name="nometintoA3">Adágio</string>
    <string name="descricaotintoA1">"Vinho Unoaked "</string>
    <string name="descricaotintoA2">(Reserva)</string>
    <string name="descricaotintoA3">"Adágio V.Sátiro Clandestino "</string>
    <string name="precotintoA1">21,50 €</string>
    <string name="precotintoA2">18,50 €</string>
    <string name="precotintoA3">25 €</string>
    <string name="nomebranca1">Athayde V. Branco</string>
    <string name="nomebranca2">Baron de B</string>
    <string name="nomebranca3">Carmim Vinha</string>
    <string name="descricaobranca1">"Alentejo Reserva garrafa 75 cl "</string>
    <string name="descricaobranca2">"Alentejo Reserva garrafa 75 cl "</string>
    <string name="descricaobranca3">"Regional Tarefa garrafa 75 cl "</string>
    <string name="precobranca1">15,90 €</string>
    <string name="precobranca2">18,90 €</string>
    <string name="precobranca3">13,50 €</string>
    <string name="nomelicor1">94 Anos de História</string>
    <string name="descricaolicor1">"Velhíssima Bairrada 1965 (70 cl) "</string>
    <string name="precolicor1">260 €</string>
    <string name="nomelicor2">Adega Ponte de Lima</string>
    <string name="descricaolicor2">"Aguardente  Verde Velhissima garrafa 50 cl "</string>
    <string name="precolicor2">65,50 €</string>
    <string name="nomellicor3">Capela de Atela</string>
    <string name="descricaolicor3">Aguardente Vínica garrafa (70 cl)</string>
    <string name="precolicor3">310 €</string>
    <string name="btnlicores">Licores</string>
    <string name="ctxTitulo">Licores</string>

</resources>